--- a/slides/deck.mdx
+++ b/slides/deck.mdx
@@ -604,7 +604,7 @@ const DataPreview = () => {
     <div>
       {Boolean(error)
         ? <DataError message={error} /> 
-        : <DataList data={data} onItemShowDetails={showDialog} />
+        : <DataList data={data} onItemShowDetails={handleOnItemShowDetails} />
       }
       <ItemDetailDialog itemId={detailsItemId} onClose={hideDialog} open={open} />
     </div>
@@ -654,7 +654,7 @@ const DataPreview = () => {
     <div>
       {Boolean(error)
         ? <DataError message={error} /> 
-        : <DataList data={data} onItemShowDetails={showDialog} />
+        : <DataList data={data} onItemShowDetails={handleOnItemShowDetails} />
       }
       <ItemDetailDialog itemId={detailsItemId} onClose={hideDialog} open={open} />
     </div>
@@ -698,7 +698,7 @@ const DataPreview = () => {
     <div>
       {Boolean(error)
         ? <DataError message={error} /> 
-        : <DataList data={data} onItemShowDetails={showDialog} />
+        : <DataList data={data} onItemShowDetails={handleOnItemShowDetails} />
       }
   
       <ItemDetailDialog itemId={detailsItemId} onClose={hideDialog} open={open} />
@@ -750,7 +750,7 @@ const DataPreview = () => {
     <div>
       {Boolean(error)
         ? <DataError message={error} /> 
-        : <DataList data={data} onItemShowDetails={showDialog} />
+        : <DataList data={data} onItemShowDetails={handleOnItemShowDetails} />
       }
   
       <ItemDetailDialog itemId={detailsItemId} onClose={hideDialog} open={open} />
@@ -766,7 +766,15 @@ const DataPreview = () => {
 ```diff showNumbers title="Example 5"
 ```
 
-```js showNumbers title="By using early return in jsx showNumbers"
+```js showNumbers title="BONUS: Opportunity for extracting reusable logic"
+function useToggle(initialState = false) {
+  const [state, setState] = useState(initialState);
+
+  const toggle = useCallback(() => setState(state => !state), []);
+
+  return [state, toggle]
+}
+
 const DataPreview = () => {
   const [loading, setLoading] = React.useState(false);
   const [data, setData] = React.useState([]);
@@ -787,14 +795,69 @@ const DataPreview = () => {
     })();
   }, []);
   
-  const [open,setOpen] = React.useState(false);
-  const showDialog = () => setOpen(true);
-  const hideDialog = () => setOpen(false);
+  const [detailsOpen, toggleDetails] = useToggle();
   
   const [detailsItemId, setDetailsItemId] = React.useState(null);
   const handleOnItemShowDetails = (id) => {
     setDetailsItemId(id);
-    showDialog();
+    toggleDetails();
+  }
+  
+  return !loading ? (
+    <div>
+      {Boolean(error)
+        ? <DataError message={error} /> 
+        : <DataList data={data} onItemShowDetails={handleOnItemShowDetails} />
+      }
+  
+      <ItemDetailDialog itemId={detailsItemId} onClose={toggleDetails} open={detailsOpen} />
+    </div>
+  ) : <Loader />;
+}
+```
+
+</Step>
+
+<Step>
+
+```diff showNumbers title="Example 5"
+```
+
+```js showNumbers title="By using early return in jsx"
+function useToggle(initialState = false) {
+  const [state, setState] = useState(initialState);
+
+  const toggle = useCallback(() => setState(state => !state), []);
+
+  return [state, toggle]
+}
+
+const DataPreview = () => {
+  const [loading, setLoading] = React.useState(false);
+  const [data, setData] = React.useState([]);
+  const [error, setError] = React.useState(null);
+  React.useEffect(() => {
+    async(() => {
+      try {
+        setLoading(true);
+        const { data } = await makeApiCall();
+        setData(data);
+        setError(null);
+        setLoading(false);
+      } catch(err) {
+        setError(err.message);
+        setData([]);
+        setLoading(false);
+      }
+    })();
+  }, []);
+  
+  const [detailsOpen, toggleDetails] = useToggle();
+  
+  const [detailsItemId, setDetailsItemId] = React.useState(null);
+  const handleOnItemShowDetails = (id) => {
+    setDetailsItemId(id);
+    toggleDetails();
   }
 
   if (loading) {
@@ -805,10 +868,10 @@ const DataPreview = () => {
     <div>
       {Boolean(error)
         ? <DataError message={error} /> 
-        : <DataList data={data} onItemShowDetails={showDialog} />
+        : <DataList data={data} onItemShowDetails={handleOnItemShowDetails} />
       }
   
-      <ItemDetailDialog itemId={detailsItemId} onClose={hideDialog} open={open} />
+      <ItemDetailDialog itemId={detailsItemId} onClose={toggleDetails} open={detailsOpen} />
     </div>
   );
 }
