Fix show numbers

--- a/slides/deck.mdx
+++ b/slides/deck.mdx
@@ -42,7 +42,7 @@ Readability can be considered as the ability of allowing the code to be easily, 
 
 Code with poor readability is
 
-- diff showNumbersicult to understand
+- difficult to understand
 - longer to debug
 - hard to maintain
 - tricky to extend
@@ -141,7 +141,7 @@ function getFieldDisplayValue(fieldValue) {
 
 <Step>
 
-```js showNumbersx showNumbers title="Example 2"
+```jsx showNumbers title="Example 2"
 const ViewToolbar = ({
   onRefresh,
   lastUpdatedTime,
@@ -176,7 +176,7 @@ const ViewToolbar = ({
 
 <Step>
 
-```js showNumbersx showNumbers title="Example 2"
+```jsx showNumbers title="Example 2"
 const ViewToolbar = ({
   onRefresh,
   lastUpdatedTime,
@@ -194,7 +194,7 @@ const ViewToolbar = ({
 }
 ```
 
-```js showNumbersx showNumbers title="By alpha sorting"
+```jsx showNumbers title="By alpha sorting"
 const ViewToolbar = ({
   actionContent,
   filterContent,
