--- a/slides/deck.mdx
+++ b/slides/deck.mdx
@@ -34,7 +34,7 @@ export const theme = themes.notes;
 
 <div className="basic-text-slide">
 
-Readability can be considered as the ability of allowing the code to be easily, quickly and clearly understandable by someone new or someone that hasn’t seen it a while.
+Readability can be considered as the ability of allowing the code to be easily, quickly and clearly understandable by someone new or someone that hasn’t seen it for a while.
 
 </div>
 
